merge-upstream: fix loading screen too big in player only mode

--- a/src/components/stage-wrapper/stage-wrapper.css
+++ b/src/components/stage-wrapper/stage-wrapper.css
@@ -2,6 +2,11 @@
 @import "../../css/colors.css";
 @import "../../css/z-index.css";
 
+.stage-wrapper {
+    /* prevents loading screen from leaking out in player only mode */
+    position: relative;
+}
+
 .stage-wrapper * {
     box-sizing: border-box;
 }
